style(products): fix overflow in detail page

--- a/static/css/darkMode.css
+++ b/static/css/darkMode.css
@@ -34,14 +34,6 @@ figure {
 body.dark-mode .card {
     background-color: #444;
     color: #fff;
-    border: 1px solid #666;
-}
-
-.card {
-    /* Estilos generales para .card en modo claro */
-    background-color: #fff;
-    color: #333;
-    border: 1px solid #ccc;
 }
 
 .loading {
